Fixed view collapse in text decoration
登録完了画面と新規登録画面のテキストデコレーションが原因のビュー崩れを修正

--- a/app/assets/stylesheets/devise/_complete-registration.scss
+++ b/app/assets/stylesheets/devise/_complete-registration.scss
@@ -44,6 +44,7 @@ body {
           width: 315px;
           color: white;
           margin: 50px auto;
+          text-decoration: none;
         }
   }
 }
