--- a/app/assets/stylesheets/users/_new.scss
+++ b/app/assets/stylesheets/users/_new.scss
@@ -38,6 +38,7 @@
         line-height: 50px;
         position: relative;
         font-size: 14px;
+        text-decoration: none;
 
         .far.fa-envelope {
           position: absolute;
@@ -56,6 +57,7 @@
         line-height: 50px;
         position: relative;
         font-size: 14px;
+        text-decoration: none;
 
         .fab.fa-facebook-square {
           position: absolute;
@@ -74,6 +76,8 @@
         line-height: 50px;
         position: relative;
         font-size: 14px;
+        text-decoration: none;
+        color: black;
 
         .fab.fa-google {
           position: absolute;
